included new features

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
         <h1>Budget Manager</h1>
         <h2 class="spend">Total Spend: <span id="total">0</span></h2>
         <h2 class="limit">Limit: <span id="limit"></span></h2>
+        <h3 class="curnames">Current Currency: <span id="curname">Dollar</span></h3>
         <h3>Enter Amount:</h3>
         <input type="text" id="amount">
         <div>
